# ns-pinn

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  singularity.def
config/: config.yaml
config/mlops/: neptune.yaml  wandb.yaml
config/model/: mlp_adam.yaml
config/model/nn/: mlp.yaml
config/model/optimizer/: adam.yaml
config/training/: long.yaml  short.yaml  single_epoch.yaml
ns_pinn/: predict.py  train.py  train_and_predict.py
ns_pinn/models/: navier_stokes_pinn.py
ns_pinn/models/components/: mlp.py
ns_pinn/utils/: config.py  csv_prediction_writer.py  data.py  dataset.py  plot.py
