[tool.poetry]
name = "ns-pinn"
version = "0.1.0"
description = ""
authors = ["Marcelo Lemos <marceloharrylemos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
lightning = "^2.1.3"
hydra-core = "^1.3.2"
wandb = "^0.16.1"
polars = "^0.20.3"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
